--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -33,7 +33,7 @@
             android:id="@+id/checkoutButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Proceed to Buy" />
+            android:text="@string/proceed_to_buy" />
 
     </LinearLayout>
 
