--- a/app/src/main/res/layout/activity_product_detail.xml
+++ b/app/src/main/res/layout/activity_product_detail.xml
@@ -34,7 +34,8 @@
                 android:src="@drawable/phone1"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_collapseMode="parallax"/>
+                app:layout_collapseMode="parallax"
+                android:contentDescription="@string/product_image" />
 
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar"
@@ -78,7 +79,7 @@
                     android:id="@+id/detailTitleTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Product Name"
+                    android:text="@string/product_name"
                     android:textAppearance="?attr/textAppearanceHeadline6" />
 
 
@@ -86,14 +87,14 @@
                     android:id="@+id/productDetailPrize"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Rs 40"/>
+                    android:text="@string/rs_40"/>
 
                 <TextView
                     android:id="@+id/detailDescriptionTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
-                    android:text="This is the discription of the productThis is the discription of the productThis is the discription of the productThis is the discription of the productThis is the discription of the productThis is the discription of the productThis is the discription of the product"
+                    android:text="@string/this_is_the_description_of_the_product_this_is_the_description_of_the_product_this_is_the_description_of_the_product_this_is_the_description_of_the_product_this_is_the_description_of_the_product_this_is_the_description_of_the_product_this_is_the_description_of_the_product"
                     android:textAppearance="?attr/textAppearanceBody2"
                     android:textColor="?android:attr/textColorSecondary" />
 
@@ -108,7 +109,8 @@
         android:layout_margin="@dimen/fab_margin"
         app:layout_anchor="@id/app_bar"
         app:layout_anchorGravity="bottom|end"
-        app:srcCompat="@drawable/ic_baseline_favorite_border_24" />
+        app:srcCompat="@drawable/ic_baseline_favorite_border_24"
+        android:contentDescription="@string/add_to_favorite" />
 
     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
         android:id="@+id/extendedFab"
@@ -116,8 +118,8 @@
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:layout_gravity="bottom|end"
-        android:contentDescription="extended_fab_content_desc"
-        android:text="Add to Cart"
+        android:contentDescription="@string/add_to_cart"
+        android:text="@string/add_to_cart"
         app:icon="@drawable/ic_baseline_add_shopping_cart_24"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
